<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".view.home.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        style="@style/detail"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/height_52dp"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@drawable/product_background"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@+id/homeConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/baseline_search_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeConstraint"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@+id/homeRv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeAllTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@drawable/category_background"
            android:gravity="center"
            android:text="@string/all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeNotebookTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeNotebookTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/notebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeMonitorTv"
            app:layout_constraintStart_toEndOf="@+id/homeAllTv"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeMonitorTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/monitor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeConsoleTv"
            app:layout_constraintStart_toEndOf="@+id/homeNotebookTv"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeConsoleTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/console"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeDesktopTv"
            app:layout_constraintStart_toEndOf="@+id/homeMonitorTv"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeDesktopTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/desktop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeHeadsetTv"
            app:layout_constraintStart_toEndOf="@+id/homeConsoleTv"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/homeHeadsetTv"
            style="@style/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="center"
            android:text="@string/headset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeDesktopTv"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeRv"
        android:layout_width="@dimen/margin_0dp"
        android:layout_height="@dimen/margin_0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeConstraint"
        tools:listitem="@layout/product_item" />

</androidx.constraintlayout.widget.ConstraintLayout>