<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.view.register.RegisterFragment">

    <include
        android:id="@+id/registerScreenToolbar"
        layout="@layout/back_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerScreenTitle"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="center"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerScreenToolbar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerScreenEmailEt"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerScreenTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerScreenPasswordEt"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerScreenEmailEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerScreenNamedEt"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerScreenPasswordEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerScreenPhonedEt"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/phone"
        android:maxLength="11"
        android:inputType="number|phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerScreenNamedEt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerScreenAddressdEt"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_48dp"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/home_address"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerScreenPhonedEt" />

    <Button
        android:id="@+id/registerScreenRegisterButton"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:backgroundTint="@color/text_color"
        android:text="@string/register"
        android:textColor="@color/screen_background"
        app:cornerRadius="@dimen/radius_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerScreenAddressdEt" />

    <TextView
        android:id="@+id/registerScreenLoginTv"
        style="@style/head_bag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>