<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.view.profile.ProfileFragment">

    <ImageView
        android:id="@+id/profileIv"
        android:layout_width="@dimen/width_150dp"
        android:layout_height="@dimen/height_150dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:src="@drawable/baseline_account_box_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileUserEmail"
        style="@style/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileIv" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/profileUserName"
        style="@style/detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40dp"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:text="@string/name"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/profileUserPhone"
        style="@style/detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40dp"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:text="@string/phone"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/profileUserAddress"
        style="@style/detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40dp"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:text="@string/home_address"
        android:background="@drawable/edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserPhone" />

    <Button
        android:id="@+id/profileUpdateButton"
        style="@style/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:backgroundTint="@color/text_color"
        android:text="@string/update"
        android:textColor="@color/screen_background"
        app:cornerRadius="@dimen/radius_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileUserAddress" />


</androidx.constraintlayout.widget.ConstraintLayout>